don't fail silently on service loading failure